cli: a refusal carrying a null parameter is still a refusal
Map.copyOf rejects a null value, and nothing between the server and here does:
the error's arguments travel through a TreeMap on the way out and a LinkedHashMap
on the way in, both of which permit one.

The throw landed outside the catch that turns a malformed body into a refusal and
inside the one that reports the server as unreachable - so a refusal the server
did send was reported as a server nobody could reach, which is worse than the
crash it looks like it should have been: the CLI states something false rather
than failing loudly.

Now an unmodifiable view over a copy, which is what the delete path already does
a few hundred lines away, for this exact reason. The warning record on the same
wire path carried the same hostility and is fixed with it.